-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.170 2008-01-09 03:04:00 remko Exp $
-----------------------------------------------------------------------------------------

2008-01-09	remko
	* gmt_init.c:		Fixed "Holiday-bug" in GMT_parse_J_option introduced 2007-12-21.
				GMT_str_tolower could run out of bounds. Probably only affected 32-bit compiles.

2007-12-30	remko
	* gmt_defaults.h:	Removed. Merged into gmt_globals.h
	* gmt_globals.h:	Now has gmt_defaults.h embedded
	* gmtalldeps.macros, src/makefile: Improved dependencies
	* gmt_calclock.h:	Should not include gmt.h (it is included by gmt.h)
	* pslib.c:		ps_bulkcopy checks version number (or any string) as part of Id: tag
				in first line. No check is performed when using "" as argument.

2007-12-21	remko
	* gmt_init.c:		Made central longitude optional in cylindrical projections.
				Made Mercator to have 1, 2, or 3 arguments.
				Allow optional standard parallel in cylindrical equidistant (-JQ).
				Added cyclindrical stereographic projection.
				Optionally use names for projections. Updated usage info.
	* explain_-J*.txt, psbasemap.txt:	Updated accordingly.
	* gmt_support.[ch]:	Added GMT_strlcmp in support of GMT_project_type
	* gmt_map.c:		When central meridian is NaN, replace it by center of longitude range.
				Added initialization of cylindrical stereographic projections
	* gmt_proj.c:		Simplified GMT_vmerc. Use central meridian and standard parallel as input.
				Added cylindrical stereographic projection functions
	* gmt_project.h:	Changed the numbering of projection IDs. Added GMT_CYL_STEREO
				Consolidated all cyclindrical projection parameters into one set of four.
	* gmt_grdio.c, mgd77manage.c:	Use the new three parameters of Mercator initialization.
	* *.c:			Avoid using numbers for projections and add GMT_CYL_STEREO where needed.

2007-12-18	remko